Fixed heading spacing.

--- a/Styles.css
+++ b/Styles.css
@@ -6,14 +6,9 @@ body {
     margin: 0px;
 }
 
-h1, h3, h6 {
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-}
-
-h2, h4, h6, p {
-    margin-block-start: 0em;
-    margin-block-end: 0em;
+main.h1, main.h3, main.h6, main.h2, main.h4, main.h6, main.p {
+    margin-block-start: 0.2em;
+    margin-block-end: 0.3em;
 }
 
 .main {
@@ -46,10 +41,15 @@ h2, h4, h6, p {
     color: #33e0ff;
     color: white;
     color: black;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+
 }
 
 .techWrit {
     color: white;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
 }
 
 .menu {
